Switching to a Camera which is hidden, does not evaluate the animation data. #64336

Closed
opened 2019-05-09 00:11:04 +02:00 by Carlo Andreacchio · 8 comments

System Information
Operating system: Ubuntu 18.10

Blender Version
Broken: 558017d6a6

Short description of error
Switching to a Camera which is hidden, does not evaluate the animation data.

Exact steps for others to reproduce the error

  1. Open attached blend file
  2. in the scene tab, change the camera to cam-main
  3. scrub in the timeline
  4. notice how the camera doesnt move
  5. enable viewport visibility on collection 5
  6. notice how it now moves

I reported a similar case a while back, not sure if the depsgraph has significantly changed since #51907

bug3.blend

**System Information** Operating system: Ubuntu 18.10 **Blender Version** Broken: 558017d6a6 **Short description of error** Switching to a Camera which is hidden, does not evaluate the animation data. **Exact steps for others to reproduce the error** 1. Open attached blend file 2. in the scene tab, change the camera to cam-main 3. scrub in the timeline 4. notice how the camera doesnt move 5. enable viewport visibility on collection 5 6. notice how it now moves I reported a similar case a while back, not sure if the depsgraph has significantly changed since #51907 [bug3.blend](https://archive.blender.org/developer/F7018614/bug3.blend)

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sebastian Parborg self-assigned this 2019-05-10 11:32:32 +02:00

Not a bug. You have disabled evaluation of the objects in that collection. So this is the correct behavior.

Not a bug. You have disabled evaluation of the objects in that collection. So this is the correct behavior.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Sorry for reopening however I would like this to be reconsidered. The active camera 'should' have special privileges which evaluate it regardless of whether it is visible or not, as it causes much artist confusion to when the camera 'should' be animated but is not.

I would also like you to look at #51907 and realise that this is exactly the same bug. Previously, when the active camera was on a hidden layer, it was not evaluated. This is the same as when a layer is disabled.

Sorry for reopening however I would like this to be reconsidered. The active camera 'should' have special privileges which evaluate it regardless of whether it is visible or not, as it causes much artist confusion to when the camera 'should' be animated but is not. I would also like you to look at #51907 and realise that this is exactly the same bug. Previously, when the active camera was on a hidden layer, it was not evaluated. This is the same as when a layer is disabled.
Sebastian Parborg removed their assignment 2019-05-10 11:49:38 +02:00
Sergey Sharybin was assigned by Sebastian Parborg 2019-05-10 11:49:38 +02:00

This issue was referenced by f5908e45d5

This issue was referenced by f5908e45d5b121de1ded0b32a4ae517da5be87a4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64336
No description provided.