Fix T64336: Switching to a Camera which is hidden, does not evaluate the animation data

Changing camera might require more objects pulled into the dependency graph,
so need tag relations for update.